<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Just reminder notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="choose_date">Select a date</string>
    <string name="item_edit_title">Edit</string>
    <string name="item_delete_title">Delete</string>
    <string name="ready">Done</string>


    <!--<string name="loren_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue auctor eros, eu facilisis odio aliquam quis. Vivamus eget mattis ante. Curabitur pharetra sed magna quis auctor. Donec ultricies pretium consectetur. Quisque fringilla lacus non dolor finibus, nec auctor sem luctus. Maecenas egestas, erat vitae feugiat luctus, lacus magna accumsan velit, euismod suscipit nisi neque quis ante. Duis sollicitudin facilisis convallis. Phasellus in iaculis quam, a volutpat erat.-->

  <!--Quisque sed maximus tellus, vehicula maximus tortor. Nam consequat eu quam ultrices dignissim. Fusce a malesuada ex. Morbi pretium vitae urna vitae tincidunt. Nullam rhoncus leo non velit placerat ultricies. Duis et scelerisque mi. Morbi ac pharetra libero. Vestibulum finibus fermentum interdum. Suspendisse auctor lorem consequat arcu dignissim commodo. In iaculis hendrerit dui a interdum. Vivamus condimentum justo a erat ultrices, ut cursus sapien aliquam. Aliquam erat volutpat. Morbi ultrices efficitur erat, non dignissim lectus consectetur et.-->

    <!--</string>-->

    <!--<string name="loren_short">-->
        <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue auctor eros, eu facilisis odio aliquam quis. Vivamus eget mattis ante. Curabitur pharetra sed magna quis auctor. Donec ultricies pretium consectetur. Quisque fringilla lacus non dolor finibus, nec auctor sem luctus. Maecenas egestas, erat vitae feugiat luctus, lacus magna accumsan velit, euismod suscipit nisi neque quis ante. Duis sollicitudin facilisis convallis. Phasellus in iaculis quam, a volutpat erat.-->

    <!--</string>-->

    <string name="exit">Exit</string>

    <string name="deleted">Note deleted!</string>

    <string name="item_info">About application</string>
    <string name="item_create">Add a note</string>
    <string name="item_show_all">View All</string>
    <string name="item_show_urgent">View important</string>
    <string name="item_show_not_urgent">View not important</string>

    <string name="email">ipinguinlinuxoid@gmail.com</string>

    <string name="title_hint">Title of note</string>
    <string name="descriptions_hint">Note text</string>

    <string name="button_home">Home</string>

    <string name="text_mainTitle">
        Please send all comments and recommendations on the application\'s work to ipinguinlinuxoid@gmail.com.
        Thank you.
    </string>



    <string name="date_for_datapicker">Date: </string>

    <string name="about_application_title">About application</string>

    <string name="update_item_title">"Edit: "</string>

    <string name="no_data">There is nothing here yet…</string>

    <string name="not_important">Not important</string>
    <string name="important">Important</string>
    <string name="push_dedline">Click here to specify the deadline</string>
    <string name="set_notification">Remind</string>
    <string name="save">Save</string>
    <string name="done">Note created!</string>
    <string name="date_was_update">The note data has been updated!</string>

    <string name="need_content_notif">It is necessary to fill in the text of the note!</string>
    <string name="need_title_notif">You must fill in the title of the note!</string>

    <string name="new_notification">New note!</string>
    <string name="see_notif">"Note № "</string>

    <string name="all_important_notification">All important notes</string>
    <string name="all_not_important_notification">All non-important notes</string>
    <string name="all_notification">All notes</string>

    <string name="about">
        This android application will help you create notes, edit them and set the time of the event. \n\n

        For all questions, please contact ipinguin-linuxoid@gmail.com
    </string>


    <string name="max_lines_limited">Exceeded number of rows exceeded</string>
    <string name="max_character_limited">Character limit exceeded</string>

</resources>